--- a/pom.xml
+++ b/pom.xml
@@ -72,20 +72,14 @@
     <dependencies>
         <dependency>
             <groupId>txmy.dev</groupId>
-            <artifactId>SpigotX</artifactId>
-            <version>1.0.0-RELEASE</version>
+            <artifactId>spigotX</artifactId>
+            <version>1.0</version>
         </dependency>
 
         <dependency>
             <groupId>txmy.dev</groupId>
-            <artifactId>wSpigot</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>invaded.cc</groupId>
             <artifactId>Common</artifactId>
-            <version>1.0.0-STABLE</version>
+            <version>1.0</version>
             <scope>provided</scope>
         </dependency>
 
@@ -95,5 +89,11 @@
             <version>1.18.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>txmy.dev</groupId>
+            <artifactId>wSpigot</artifactId>
+            <version>1.0.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
