--- a/pom.xml
+++ b/pom.xml
@@ -95,5 +95,11 @@
             <version>1.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>net.skulluhc</groupId>
+            <artifactId>UHC</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 </project>
