--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
         </dependency>
 
         <dependency>
+            <groupId>net.skulluhc</groupId>
+            <artifactId>lunar-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>me.txmy</groupId>
             <artifactId>CommandFramework</artifactId>
             <version>1.0</version>
