--- a/pom.xml
+++ b/pom.xml
@@ -75,15 +75,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>txmy.dev</groupId>
-            <artifactId>spigotX</artifactId>
-            <version>1.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>txmy.dev</groupId>
+            <groupId>net.skulluhc</groupId>
             <artifactId>Common</artifactId>
-            <version>1.0</version>
+            <version>1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
@@ -91,31 +85,14 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.12</version>
-        </dependency>
-
-        <dependency>
-            <groupId>txmy.dev</groupId>
-            <artifactId>slspigot</artifactId>
-            <version>1.0</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
-            <groupId>net.skulluhc</groupId>
-            <artifactId>UHC</artifactId>
-            <version>1.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>net.skulluhc</groupId>
-            <artifactId>lunar-api</artifactId>
-            <version>1.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>me.txmy</groupId>
-            <artifactId>CommandFramework</artifactId>
-            <version>1.0</version>
+            <groupId>txmy.dev</groupId>
+            <artifactId>Spigot</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
