--- a/pom.xml
+++ b/pom.xml
@@ -21,43 +21,6 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
-
-                <configuration>
-                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo
-                    </altDeploymentRepository>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>com.github.github</groupId>
-                <artifactId>site-maven-plugin</artifactId>
-                <version>0.11</version>
-                <configuration>
-                    <message>Maven artifacts for ${project.version}</message> <!-- git commit message -->
-                    <noJekyll>true</noJekyll>  <!-- disable webpage processing -->
-                    <outputDirectory>${project.build.directory}/mvn-repo
-                    </outputDirectory> <!-- matches distribution management repository url above -->
-                    <branch>refs/heads/mvn-repo</branch> <!-- remote branch name -->
-                    <includes>
-                        <include>**/*</include>
-                    </includes>
-                    <repositoryName>InvadedCore</repositoryName> <!-- github repo name -->
-                    <repositoryOwner>txmydev</repositoryOwner>
-                </configuration>
-                <executions> <!-- run site-maven-plugin's 'site' target as part of the build's normal 'deploy' phase -->
-                    <execution>
-                        <goals>
-                            <goal>site</goal>
-                        </goals>
-                        <phase>deploy</phase>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
 
@@ -75,9 +38,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.skulluhc</groupId>
+            <groupId>invaded.cc</groupId>
             <artifactId>Common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
             <scope>provided</scope>
         </dependency>
 
@@ -89,8 +52,8 @@
         </dependency>
 
         <dependency>
-            <groupId>txmy.dev</groupId>
-            <artifactId>Spigot</artifactId>
+            <groupId>net.skulluhc</groupId>
+            <artifactId>spigot</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
