--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
             <version>1.18.12</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>net.skulluhc</groupId>
+            <artifactId>lunar-api</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>net.skulluhc</groupId>
