--- a/pom.xml
+++ b/pom.xml
@@ -59,8 +59,8 @@
 
         <dependency>
             <groupId>net.skulluhc</groupId>
-            <artifactId>spigot</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>Spigot</artifactId>
+            <version>1.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
