organized commands & done some stuff

--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,9 @@
         </dependency>
 
         <dependency>
-            <groupId>net.skulluhc</groupId>
-            <artifactId>Spigot</artifactId>
-            <version>1.0</version>
+            <groupId>txmy.dev.spigot</groupId>
+            <artifactId>battlespigot-server</artifactId>
+            <version>1.7.10-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
