--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,34 @@
 
     <packaging>jar</packaging>
 
+    <properties>
+        <kotlin.version>1.3.11</kotlin.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
+                <executions>
+                    <execution>
+                        <id>compile</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>testCompile</id>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -23,10 +45,6 @@
             </plugin>
         </plugins>
     </build>
-
-    <properties>
-        <github.global.server>github</github.global.server>
-    </properties>
 
     <distributionManagement>
         <repository>
@@ -50,19 +68,23 @@
             <version>1.18.12</version>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
-            <groupId>txmy.dev.spigot</groupId>
-            <artifactId>battlespigot-server</artifactId>
-            <version>1.7.10-R0.1-SNAPSHOT</version>
+            <groupId>net.skulluhc</groupId>
+            <artifactId>Spigot</artifactId>
+            <version>1.0</version>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>net.skulluhc</groupId>
             <artifactId>Log4jExploitFixer</artifactId>
             <version>1.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test</artifactId>
+            <version>${kotlin.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
