--- a/pom.xml
+++ b/pom.xml
@@ -69,9 +69,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>net.skulluhc</groupId>
-            <artifactId>Spigot</artifactId>
-            <version>1.0</version>
+            <groupId>rip.battle.spigot</groupId>
+            <artifactId>battlespigot-server</artifactId>
+            <version>1.7.10-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
